config/samples/gateway-with-multiple-listeners.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: kong
spec:
  controllerName: konghq.com/gateway-operator
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: kong
  namespace: default
spec:
  gatewayClassName: kong
  listeners:
  - name: http
    protocol: HTTP
    port: 8080
  - name: http2
    protocol: HTTP
    port: 8089
  - name: tls
    protocol: TLS
    port: 9443
    tls:
      mode: Passthrough
